--- a/package.json
+++ b/package.json
@@ -8,20 +8,32 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "babelMacros": {
+    "twin": {
+      "preset": "emotion"
+    }
+  },
   "dependencies": {
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "next": "^14.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.11.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "twin.macro": "^3.4.1",
     "typescript": "^5"
   }
 }
